Hooking up uploaded image processing was easier than I thought

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # my things
-benwaonline/static/*.jpg
+benwaonline/static/imgs/
+benwaonline/static/thumbs/
 benwaonline/static/*benwas/
 media/
 .vscode/
