This is just gonna break everything. Things done: * Created REST-ish api * Figured out authentication (for the most part) * refactored e v e r y th i ng

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,14 @@ wtforms
 flask_sqlalchemy
 Alembic
 Flask-Migrate
-Flask-Admin
 Flask-Security
 flask-oauthlib
 flask-uploads
 bcrypt
+marshmallow
+marshmallow-jsonapi
+flask-restless
+cryptography
+python-jose
+--use-wheel --no-index --find-links=https://github.com/sfbahr/PyCrypto-Wheels/raw/master/pycrypto-2.6.1-cp35-none-win_amd64.whl pycrypto
 .
