--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
+pytest
+pytest-flask
 flask
+flask-login
 gunicorn
 wtforms
-flask_sqlalchemy
-Alembic
-Flask-Migrate
-Flask-Security
 flask-oauthlib
 flask-uploads
-bcrypt
 marshmallow
 marshmallow-jsonapi
-flask-restless
+requests
 cryptography
 python-jose
 --use-wheel --no-index --find-links=https://github.com/sfbahr/PyCrypto-Wheels/raw/master/pycrypto-2.6.1-cp35-none-win_amd64.whl pycrypto
+git@github.com:goosechooser/benwaonlineapi.git
 .
