--- a/benwaonline/Dockerfile
+++ b/benwaonline/Dockerfile
@@ -5,4 +5,5 @@ WORKDIR /usr/src/app
 
 COPY . .
 
-RUN pip install --no-cache-dir requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install .
