--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,45 @@
-pytest
-pytest-flask
-flask
-flask-login
-gunicorn
-wtforms
-flask-oauthlib
-flask-uploads
-marshmallow
-marshmallow-jsonapi
-requests
-cryptography
-python-jose
---use-wheel --no-index --find-links=https://github.com/sfbahr/PyCrypto-Wheels/raw/master/pycrypto-2.6.1-cp35-none-win_amd64.whl pycrypto
-git@github.com:goosechooser/benwaonlineapi.git
-.
+asn1crypto==0.24.0
+attrs==17.3.0
+certifi==2017.11.5
+cffi==1.11.2
+chardet==3.0.4
+click==6.7
+colorama==0.3.9
+colorclass==2.2.0
+cryptography==2.1.4
+ecdsa==0.13
+Flask==0.12.2
+Flask-Login==0.4.1
+Flask-OAuthlib==0.9.4
+Flask-Uploads==0.2.1
+git+https://github.com/jfinkels/flask-restless/
+future==0.16.0
+gunicorn==19.7.1
+idna==2.6
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
+marshmallow==2.15.0
+marshmallow-jsonapi==0.16.0
+oauthlib==2.0.6
+packaging==16.8
+pip-check==0.2
+pip-check-reqs==2.0.1
+pluggy==0.6.0
+py==1.5.2
+pycparser==2.18
+pycrypto==2.6.1
+pyparsing==2.2.0
+pytest==3.3.1
+pytest-flask==0.10.0
+python-jose==1.4.0
+requests==2.18.4
+requests-oauthlib==0.8.0
+six==1.11.0
+terminaltables==3.1.0
+urllib3==1.22
+Werkzeug==0.13
+WTForms==2.1
+
+# if needed on windows
+#--use-wheel --no-index --find-links=https://github.com/sfbahr/PyCrypto-Wheels/raw/master/pycrypto-2.6.1-cp35-none-win_amd64.whl pycrypto
