--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Flask==0.12.2
 Flask-Login==0.4.1
 Flask-OAuthlib==0.9.4
 Flask-Uploads==0.2.1
+Flask-WTF==0.14.2
 git+https://github.com/jfinkels/flask-restless/
 future==0.16.0
 gunicorn==19.7.1
