--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,5 @@ script:
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
     docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
-    docker push "$DOCKER_USERNAME"/benwaonline-api;
+    docker push "$DOCKER_USERNAME"/benwaonline;
     fi
