--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ services:
   - docker
 
 before_install:
-  - docker build -t goosechooser/benwaonline:test .
-  - docker run -d goosechooser/benwaonline:test
+  - docker build -t goosechooser/benwaonline:latest .
+  - docker run -d goosechooser/benwaonline:latest
   - docker ps -a
 
 install:
@@ -26,5 +26,5 @@ script:
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
     docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
-    docker push "$DOCKER_USERNAME"/benwaonline;
+    docker push "$DOCKER_USERNAME"/benwaonline:latest;
     fi
