--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ pluggy==0.6.0
 py==1.5.2
 pycparser==2.18
 pycrypto==2.6.1
+pymemcache==1.4.4
 pyparsing==2.2.0
 pytest==3.3.1
 pytest-flask==0.10.0
