--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ ecdsa==0.13
 Flask==0.12.2
 Flask-Login==0.4.1
 Flask-OAuthlib==0.9.4
+flask-profiler==1.6
 git+https://github.com/jfinkels/flask-restless/
 Flask-Uploads==0.2.1
 Flask-WTF==0.14.2
