--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,12 @@ click==6.7
 colorama==0.3.9
 colorclass==2.2.0
 cryptography==2.1.4
+cssmin==0.2.0
 ecdsa==0.13
 Flask==0.12.2
+Flask-Assets==0.12
 Flask-Login==0.4.1
 Flask-OAuthlib==0.9.4
-flask-profiler==1.6
 git+https://github.com/jfinkels/flask-restless/
 Flask-Uploads==0.2.1
 Flask-WTF==0.14.2
@@ -45,6 +46,7 @@ six==1.11.0
 SQLAlchemy==1.2.0
 terminaltables==3.1.0
 urllib3==1.22
+webassets==0.12.1
 Werkzeug==0.13
 WTForms==2.1
 
