--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ click==6.7
 colorama==0.3.9
 colorclass==2.2.0
 cryptography==2.1.4
+cssmin==0.2.0
 ecdsa==0.13
 Flask==0.12.2
+Flask-Assets==0.12
 Flask-Login==0.4.1
 Flask-OAuthlib==0.9.4
 git+https://github.com/jfinkels/flask-restless/
@@ -44,6 +46,7 @@ six==1.11.0
 SQLAlchemy==1.2.0
 terminaltables==3.1.0
 urllib3==1.22
+webassets==0.12.1
 Werkzeug==0.13
 WTForms==2.1
 
