Lets see if we cant tag our images like real adults

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,8 @@ services:
   - memcached
 
 before_install:
-  - mkdir logs
 #   - docker build -t goosechooser/benwaonline:latest .
-#   - docker run -d goosechooser/benwaonline:latest
-#   - docker ps -a
+
 
 install:
   - pip install -r requirements.txt
@@ -30,11 +28,14 @@ script:
 
 after_success:
   - docker build -t benwaonline .
+  # - docker run -d benwaonline:latest
+  # - docker ps -a
+
   - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
       docker tag benwaonline:latest "$DOCKER_USERNAME"/benwaonline:latest;
       docker push "$DOCKER_USERNAME"/benwaonline:latest;
     else
-      docker tag benwaonline:latest "$DOCKER_USERNAME"/benwaonline:dev;
-      docker push "$DOCKER_USERNAME"/benwaonline:dev;
+      docker tag benwaonline:latest "$DOCKER_USERNAME"/benwaonline:"$TRAVIS_BRANCH";
+      docker push "$DOCKER_USERNAME"/benwaonline:"$TRAVIS_BRANCH";
     fi
