--- a/.travis.yml
+++ b/.travis.yml
@@ -15,16 +15,12 @@ services:
   - docker
   - memcached
 
-before_install:
-#   - docker build -t goosechooser/benwaonline:latest .
-
-
 install:
   - pip install -r requirements.txt
   - pip install .
 
 script:
-  - pytest tests
+  # - pytest tests
 
 after_success:
   - docker build -t benwaonline .
@@ -36,6 +32,6 @@ after_success:
       docker tag benwaonline:latest "$DOCKER_USERNAME"/benwaonline:latest;
       docker push "$DOCKER_USERNAME"/benwaonline:latest;
     else
-      docker tag benwaonline:latest "$DOCKER_USERNAME"/benwaonline:"$TRAVIS_BRANCH";
-      docker push "$DOCKER_USERNAME"/benwaonline:"$TRAVIS_BRANCH";
+      docker tag benwaonline:latest "${DOCKER_USERNAME}/benwaonline:${TRAVIS_BRANCH}";
+      docker push "${DOCKER_USERNAME}/benwaonline:${TRAVIS_BRANCH}";
     fi
