--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,12 @@ after_success:
   - docker build -t benwaonline .
   # - docker run -d benwaonline:latest
   # - docker ps -a
+  
+  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+      docker tag benwaonline:latest "$DOCKER_USERNAME"/benwaonline:latest;
+      docker push "$DOCKER_USERNAME"/benwaonline:latest;
+    else
+      docker tag benwaonline:latest "${DOCKER_USERNAME}/benwaonline:${TRAVIS_BRANCH}";
+      docker push "${DOCKER_USERNAME}/benwaonline:${TRAVIS_BRANCH}";
+    fi
