--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ services:
   - memcached
 
 install:
-  - pip install -r restless-requirements.txt
+  - pip install -r requirements.txt
   - pip install .
 
 script:
