--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - pip install .
 
 script:
-  - pytest tests
+  - python setup.py test
 
 # This would be a good spot to run tests against the docker image
 after_success:
