--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
-recursive-include benwaonline/templates *
-recursive-include benwaonline/static *
-graft benwaonline/auth/templates
-graft benwaonline/front/templates
-graft benwaonline/gallery/templates
-graft benwaonline/userinfo/templates
+graft src
+
+include requirements.txt
+include tox.ini
+include .coveragerc
+recursive-include tests *
