--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,2 @@
-[aliases]
-test=pytest
-
-[tool:pytest]
-norecursedirs=tests/helpers
+[tools:pytest]
+norecursedirs = docs *.egg-info .git appdir .tox tests/helpers
