Trying to fix an issue where build fails due to volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,5 @@ services:
             - SECURITY_PASSWORD_SALT
             - SECRET_KEY
         command: py.test --cov-config .coveragerc --cov=benwaonline --cov-report xml tests/
-        volumes:
-            - ./:/usr/src/app
+        # volumes:
+        #     - ./:/usr/src/app
