--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,10 @@ version: '3.4'
 
 services:
     testing:
-        build:
-            context: .
-            target: testing
+        # build:
+        #     context: .
+        #     target: testing
+        image: benwaonline:testing
         environment:
             - FLASK_CONFIG=test
             - API_URL=http://benwaonline-api
