I hate doing this but I'm at a loss for why the tests disappeared

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,8 @@
 [aliases]
 test=pytest
 
-[tools:pytest]
-norecursedirs = docs *.egg-info .git appdir .tox tests/helpers
+[tool:pytest]
+norecursedirs=tests/helpers
+
+# [tools:pytest]
+# norecursedirs = docs *.egg-info .git appdir .tox tests/helpers
