--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 test=pytest
 
 [tool:pytest]
-norecursedirs=tests/helpers
+norecursedirs=tests/helpers node_modules/*
 
 # [tools:pytest]
 # norecursedirs = docs *.egg-info .git appdir .tox tests/helpers
