--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ secrets.py
 *.sql
 min_style.*
 style_busted.*
+benwaonline/static/css
+!/css/style.css
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
