--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ pycparser==2.18
 pycryptodome==3.5.1
 pyparsing==2.2.0
 python-dateutil==2.6.1
+python-dotenv==0.8.2
 python-jose==2.0.2
 redis==2.10.6
 requests==2.18.4
