only need 1 css file in the repo

--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,11 @@ media/
 *.db
 .pylintrc
 secrets.py
-*.db
 *.sql
 min_style.*
 style_busted.*
-benwaonline/static/css
-!/css/style.css
+benwaonline/static/css/
+!benwaonline/static/css/style.css
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
