--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,12 @@ env:
 
 services:
   - docker
-  - redis-server
+  - redis
 
 install:
-  - pip install -r requirements.txt
-  - pip install -r requirements-testing.txt
-  - pip install .
+  - pip install pipenv
+  - pipenv install --dev
+  # - pip install .
 
 script:
   - py.test --cov-config .coveragerc --cov=benwaonline --cov-report xml tests/
