--- a/Pipfile
+++ b/Pipfile
@@ -21,40 +21,40 @@ certifi = "==2017.11.5"
 cffi = "==1.11.2"
 chardet = "==3.0.4"
 click = "==6.7"
-cryptography = "==2.1.4"
+cryptography = "*"
 ecdsa = "==0.13.3"
 future = "==0.16.0"
 gunicorn = "==19.7.1"
 idna = "==2.6"
 itsdangerous = "==0.24"
-marshmallow = "==2.15.0"
-marshmallow-jsonapi = "==0.16.0"
-oauthlib = "==2.0.6"
+marshmallow = "*"
+marshmallow-jsonapi = "*"
+oauthlib = "*"
 pycparser = "==2.18"
-pycryptodome = "==3.5.1"
+pycryptodome = "*"
 pyparsing = "==2.2.0"
 python-dateutil = "==2.6.1"
 python-dotenv = "==0.8.2"
 python-jose = "==2.0.2"
 redis = "==2.10.6"
-requests = "==2.18.4"
-requests-oauthlib = "==0.8.0"
+requests = "*"
+requests-oauthlib = "*"
 six = "==1.11.0"
-urllib3 = "==1.22"
+urllib3 = "*"
 webassets = "==0.12.1"
 Flask = "==1.0.2"
 Flask-Assets = "==0.12"
 Flask-Caching = "==1.4.0"
 Flask-Login = "==0.4.1"
-Flask-OAuthlib = "==0.9.4"
 Flask-Uploads = "==0.2.1"
 Flask-WTF = "==0.14.2"
-Jinja2 = "==2.10"
+Jinja2 = "*"
 MarkupSafe = "*"
 pip_check_reqs = "==2.0.1"
-SQLAlchemy = "==1.2.0"
-Werkzeug = "==0.14.1"
+SQLAlchemy = "*"
+Werkzeug = "==0.16.1"
 WTForms = "==2.1"
+authlib = "*"
 
 [requires]
 python_version = "3.6"
